About text added and .get name updated

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
 	<div class="main-content">
 		{{>header}}
+		<p>This app was created by {{name}}. It uses data collected from both mapbox.com and weatherstack.com to provide users with the current weather of the provided location.</p>
 		<img src="/img/IMG_1528.jpg" class="portrait"/>
 	</div>
 	{{>footer}}
